fix compression setting, fix path

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Games</title>
   </head>
   <body>
-	<a href="/the_game/index.html">The Game</a>
+	<a href="/games/the_game/index.html">The Game</a>
   </body>
 </html>
