--- a/the_game/index.html
+++ b/the_game/index.html
@@ -56,13 +56,13 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl.loader.js";
+      var loaderUrl = buildUrl + "/the_game.loader.js";
       var config = {
-        dataUrl: buildUrl + "/webgl.data.br",
-        frameworkUrl: buildUrl + "/webgl.framework.js.br",
-        codeUrl: buildUrl + "/webgl.wasm.br",
+        dataUrl: buildUrl + "/the_game.data",
+        frameworkUrl: buildUrl + "/the_game.framework.js",
+        codeUrl: buildUrl + "/the_game.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "asteroidgame",
         productName: "The Game",
         productVersion: "1.0",
         showBanner: unityShowBanner,
