--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
 	<a href="/games/the_game/index.html">The Game</a>
+	</br>
+	<a href="/games/snake/index.html">snake 🐍</a>
   </body>
 </html>
