add quantum metropolis

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 	<a href="/games/the_game/index.html">The Game</a>
 	</br>
 	<a href="/games/snake/index.html">snake 🐍</a>
+	</br>
+	<a href="/games/quantum_metropolis/index.html">Quantum Metropolis</a>
   </body>
 </html>
